change accordions.liquid with featured preset, move sign-creator placeholder to js to fix spacing issue, box in sign-creator

--- a/assets/sm-component-accordion.css
+++ b/assets/sm-component-accordion.css
@@ -13,7 +13,7 @@ sm-accordions {
 }
 
 .accordions__wrapper > * + * {
-  margin-top: 5.6rem;
+  margin-top: 1.2rem;
 }
 .accordions__header {
   margin: 0 auto;
